--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,3 @@
 cmake_minimum_required (VERSION 2.6)
 project (Shapes)
-add_executable(Program main.cpp menu.cpp)
+add_executable(Program main.cpp menu.cpp shape.cpp)
