--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
 cmake_minimum_required (VERSION 2.6)
 project (Shapes)
+add_executable(Test main_test.cpp test.cpp menu.cpp square.cpp rectangle.cpp triangle.cpp circle.cpp trapezium.cpp)
 add_executable(Program main.cpp menu.cpp square.cpp rectangle.cpp triangle.cpp circle.cpp trapezium.cpp)
